--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "author": "Rajat Verma",
     "license": "ISC",
     "dependencies": {
+        "axios": "^0.27.2",
         "bcryptjs": "^2.4.3",
+        "body-parser": "^1.20.0",
+        "cookie-parser": "^1.4.6",
         "dotenv": "^7.0.0",
         "ejs": "^3.1.8",
         "express": "^4.16.4",
