--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
         "express-rate-limit": "^6.4.0",
         "helmet": "^5.1.0",
         "hpp": "^0.2.3",
+        "html-to-text": "^9.0.3",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^5.5.2",
         "morgan": "^1.9.1",
         "nodemailer": "^6.7.5",
+        "nodemailer-sendgrid": "^1.0.3",
         "nodemon": "^2.0.16",
         "pug": "^3.0.2",
         "slugify": "^1.6.5",
