--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "nodemon": "^2.0.16",
         "pug": "^3.0.2",
         "slugify": "^1.6.5",
+        "stripe": "^11.9.1",
         "validator": "^13.7.0",
         "xss-clean": "^0.1.1"
     },
