swagger ui api documentation

--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
         "pug": "^3.0.2",
         "slugify": "^1.6.5",
         "stripe": "^11.9.1",
+        "swagger-jsdoc": "^6.2.8",
+        "swagger-ui-express": "^5.0.0",
         "validator": "^13.7.0",
         "xss-clean": "^0.1.1"
     },
