--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "express": "^4.16.4",
         "express-mongo-sanitize": "^2.2.0",
         "express-rate-limit": "^6.4.0",
+        "firebase-admin": "^11.11.0",
         "helmet": "^5.1.0",
         "hpp": "^0.2.3",
         "html-to-text": "^9.0.3",
